<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSeleccionarPlatos"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/txtEntrada" />

    <Spinner
        android:id="@+id/spinnerEntradas"
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/txtPlatoFuerte" />

    <Spinner
        android:id="@+id/spinnerFuerte"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/txtGuarnicion" />

    <Spinner
        android:id="@+id/spinnerGuarnicion"
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/txtPostre" />

    <Spinner
        android:id="@+id/spinnerPostre"
        android:layout_width="match_parent"
        android:layout_height="35dp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="calcularCostos"
        android:text="@string/btnCalcular" />

    <Button
        android:id="@+id/button1Contacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mostrarSeleccionContactos"
        android:text="@string/seleccInvitados" />

    <Button
        android:id="@+id/button1Enviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="enviarSMS"
        android:text="@string/btnEnviarInv" />

</LinearLayout>
